# SolanaGigs

frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: NavBar.tsx  SolanaPayQR.tsx  TaskCard.tsx  TaskForm.tsx  TaskMap.tsx  TaskMapLeaflet.tsx  TaskMarkers.tsx
frontend/src/config/: web3auth.ts
frontend/src/hooks/: useSolanaWallet.ts
frontend/src/lib/: supabase.ts
frontend/src/pages/: BrowsePage.tsx  LandingPage.tsx  MapPage.tsx  PostTaskPage.tsx  ProfilePage.tsx
frontend/src/utils/: leafletFix.ts
solana-program/task-escrow/: Anchor.toml
solana-program/task-escrow/programs/task-escrow/: Cargo.toml
solana-program/task-escrow/programs/task-escrow/src/: lib.rs
solana-program/task-escrow/tests/: task-escrow.ts
