[package]
name = "task-escrow"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "task_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = "z"

[dependencies]
anchor-lang = "0.30.1"